Stats style fix (#113)
* Merge

* Initial

* Added colors to timers

* Positioning things

* Flex end od axi

* Moved quit to the end of column

* Added default scrollbar

* Added custom scrollbar

* Change color to yellow

* Fixed semicolons

--- a/src/app/components/genericButton/Button.module.scss
+++ b/src/app/components/genericButton/Button.module.scss
@@ -7,6 +7,7 @@
     @extend %h4;
     @extend %button-yellow; 
     font-weight: 700;
+    height: 40px;
 
   &.buttonAnimated {
     letter-spacing: 2px;
